--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,21 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "scripts": {
+    "serve": "firebase serve --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
+  },
   "dependencies": {
-    "firebase-admin": "~4.2.1",
-    "firebase-functions": "^0.5.7"
+    "ejs": "^2.6.1",
+    "firebase-admin": "^6.5.0",
+    "firebase-functions": "^2.1.0",
+    "nodemailer": "^5.1.1"
+  },
+  "engines": {
+    "node": "8"
   },
   "private": true
 }
